# Genome-Assembly-and-Annotation-Nomenclature_WG

./: README.md  pyproject.toml  setup.cfg
lib/gaan/: __init__.py  gaan-validate.py  gaan.py
