[metadata]
name = GAAN
version = 0.0.1
author = 
author_email = 
description = GAAN conversion and validation scripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AgBioData/Genome-Assembly-and-Annotation-Nomenclature_WG
project_urls =
    Bug Tracker = https://github.com/AgBioData/Genome-Assembly-and-Annotation-Nomenclature_WG/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: Public Domain
    Natural Language :: English
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Bio-Informatics
    

[options]
package_dir = 
    = lib
install_requires =
    argparse>=1.1
packages = find:
python_requires = >=3.6

[options.entry_points]
[console_scripts]
    gaan = gaan.gaan:main

[options.packages.find]
where = lib
